[CST-18016] Fix on CombinedMetadatumContributor to handle different list size